# rbp_eval

./: INSTALL  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
dcg_eval/: Makefile.am  Makefile.in  main.cpp
librbp/: Makefile.am  Makefile.in  args.c  args.h  array.c  array.h  dblheap.c  dblheap.h  depth.c  depth.h  error.c  error.h  futil.c  futil.h  output.h  persist.c  persist.h  qdocs.c  qdocs.h  qrels.c  qrels.h  rbp.c  rbp.h  res.c  res.h  run.c  run.h  strhash.c  strhash.h  strid.c  strid.h  util.c  util.h
librbp++/: Makefile.am  Makefile.in  dococcur.h  hash.h  jlog.cpp  jlog.h  jpick.h  judgment.h  kendpenalty.h  mmath.cpp  mmath.cpp~  mmath.h  parselist.h  pool.cpp  pool.h  qidspec.cpp  qidspec.h  qrels.cpp  qrels.h  rbo.h  rbp.cpp  rbp.h  run.cpp  run.h  rungroups.cpp  rungroups.h  runlist.cpp  runlist.h  syslist.cpp  syslist.h  sysrank_topic.h  sysrank_topic_hash.h  wgtint.h
librbp++/test/: Makefile.am  Makefile.in  jlog.cpp  parselist.cpp  qidspec.cpp  qrels.cpp  rbp.cpp  run.cpp  rungroups.cpp  syslist.cpp
rbp_eval/: Makefile.am  Makefile.in  desc_fmt.c  desc_fmt.h  fmt.h  help.c  help.h  main.c  opt.c  opt.h  rbp_eval.1.in  tester.c  trec_fmt.c  trec_fmt.h
rbp_eval/test/data/: 1.spec  10.spec  11.spec  2.spec  3.spec  4.spec  5.spec  6.spec  7.spec  8.spec  9.spec  README.txt  basic.qrels  frac.qrels  manyties.run  mult.qrels  noties-jumbled.run  noties.run  ties-jumbled.run  ties.run
rbp_util/: Makefile.am  Makefile.in  common.c  common.h  dococcur.c  dococcur.h  docwgt.c  docwgt.h  dqhash.c  dqhash.h  minavgerr.c  minmaxerr.c  pooljudge.c  reltrans.c  runerr.c  runerr.h
stats/: Makefile.am  Makefile.in  binomial.c  binomial.h  bootstrap.c  bootstrap.h  kendall.c  kendall.h  sign.c  sign.h  stats.h  t.c  t.h  tau_ap.cpp  tau_ap.h  wilcoxon.c  wilcoxon.h
stats/test/: Makefile.am  Makefile.in  tau_ap.cpp
